// This file is auto-generated by gen-snapshot-tests.js
// Do not edit this file.  To make changes to these snapshot tests
// edit packages/wonder-blocks-link/docs.md and run `npm run gen-snapshot-tests`.
import React from "react";
import renderer from "react-test-renderer";
import Link from "./components/link.js";

describe("wonder-blocks-link", () => {
    it("example 1", () => {
        const Color = require("wonder-blocks-color").default;
        const LinkCore = require("./components/link-core.js").default;

        const {offWhite} = Color;

        const example = (
            <table style={{background: offWhite}}>
                <tbody>
                    <tr>
                        <th>Default</th>
                        <td>
                            <p>
                                Lorem ipsum{" "}
                                <LinkCore
                                    kind="primary"
                                    light={false}
                                    hovered={false}
                                    focused={false}
                                    pressed={false}
                                    href="#nonexistent-link"
                                >
                                    Label
                                </LinkCore>, dolor sit amet, consectetur
                                adipiscing elit.
                            </p>
                        </td>
                    </tr>
                    <tr>
                        <th>Hover/Focus</th>
                        <td>
                            <p>
                                Lorem ipsum{" "}
                                <LinkCore
                                    kind="primary"
                                    light={false}
                                    hovered={true}
                                    focused={false}
                                    pressed={false}
                                    href="#link"
                                >
                                    Label
                                </LinkCore>, dolor sit amet, consectetur
                                adipiscing elit.
                            </p>
                        </td>
                    </tr>
                    <tr>
                        <th>Active/Press</th>
                        <td>
                            <p>
                                Lorem ipsum{" "}
                                <LinkCore
                                    kind="primary"
                                    light={false}
                                    hovered={false}
                                    focused={false}
                                    pressed={true}
                                    href="#link"
                                >
                                    Label
                                </LinkCore>, dolor sit amet, consectetur
                                adipiscing elit.
                            </p>
                        </td>
                    </tr>
                    <tr>
                        <th>Visited</th>
                        <td>
                            <p>
                                Lorem ipsum{" "}
                                <LinkCore
                                    kind="primary"
                                    light={false}
                                    hovered={false}
                                    focused={false}
                                    pressed={false}
                                    href="https://khanacademy.org"
                                >
                                    Label
                                </LinkCore>, dolor sit amet, consectetur
                                adipiscing elit.
                            </p>
                        </td>
                    </tr>
                </tbody>
            </table>
        );
        const tree = renderer.create(example).toJSON();
        expect(tree).toMatchSnapshot();
    });
    it("example 2", () => {
        const Color = require("wonder-blocks-color").default;
        const LinkCore = require("./components/link-core.js").default;

        const {offWhite, offBlack64} = Color;

        const example = (
            <table style={{background: offWhite, color: offBlack64}}>
                <tbody>
                    <tr>
                        <th>Default</th>
                        <td>
                            <p>
                                Lorem ipsum{" "}
                                <LinkCore
                                    kind="secondary"
                                    light={false}
                                    hovered={false}
                                    focused={false}
                                    pressed={false}
                                    href="#nonexistent-link"
                                >
                                    Label
                                </LinkCore>, dolor sit amet, consectetur
                                adipiscing elit.
                            </p>
                        </td>
                    </tr>
                    <tr>
                        <th>Hover/Focus</th>
                        <td>
                            <p>
                                Lorem ipsum{" "}
                                <LinkCore
                                    kind="secondary"
                                    light={false}
                                    hovered={true}
                                    focused={false}
                                    pressed={false}
                                    href="#link"
                                >
                                    Label
                                </LinkCore>, dolor sit amet, consectetur
                                adipiscing elit.
                            </p>
                        </td>
                    </tr>
                    <tr>
                        <th>Active/Press</th>
                        <td>
                            <p>
                                Lorem ipsum{" "}
                                <LinkCore
                                    kind="secondary"
                                    light={false}
                                    hovered={false}
                                    focused={false}
                                    pressed={true}
                                    href="#link"
                                >
                                    Label
                                </LinkCore>, dolor sit amet, consectetur
                                adipiscing elit.
                            </p>
                        </td>
                    </tr>
                    <tr>
                        <th>Visited</th>
                        <td>
                            <p>
                                Lorem ipsum{" "}
                                <LinkCore
                                    kind="secondary"
                                    light={false}
                                    hovered={false}
                                    focused={false}
                                    pressed={false}
                                    href="https://khanacademy.org"
                                >
                                    Label
                                </LinkCore>, dolor sit amet, consectetur
                                adipiscing elit.
                            </p>
                        </td>
                    </tr>
                </tbody>
            </table>
        );
        const tree = renderer.create(example).toJSON();
        expect(tree).toMatchSnapshot();
    });
    it("example 3", () => {
        const Color = require("wonder-blocks-color").default;
        const LinkCore = require("./components/link-core.js").default;

        const {white64, darkBlue} = Color;

        const example = (
            <table style={{background: darkBlue, color: white64}}>
                <tbody>
                    <tr>
                        <th>Default</th>
                        <td>
                            <p>
                                Lorem ipsum{" "}
                                <LinkCore
                                    kind="primary"
                                    light={true}
                                    hovered={false}
                                    focused={false}
                                    pressed={false}
                                    href="#nonexistent-link"
                                >
                                    Label
                                </LinkCore>, dolor sit amet, consectetur
                                adipiscing elit.
                            </p>
                        </td>
                    </tr>
                    <tr>
                        <th>Hover/Focus</th>
                        <td>
                            <p>
                                Lorem ipsum{" "}
                                <LinkCore
                                    kind="primary"
                                    light={true}
                                    hovered={true}
                                    focused={false}
                                    pressed={false}
                                    href="#link"
                                >
                                    Label
                                </LinkCore>, dolor sit amet, consectetur
                                adipiscing elit.
                            </p>
                        </td>
                    </tr>
                    <tr>
                        <th>Active/Press</th>
                        <td>
                            <p>
                                Lorem ipsum{" "}
                                <LinkCore
                                    kind="primary"
                                    light={true}
                                    hovered={false}
                                    focused={false}
                                    pressed={true}
                                    href="#link"
                                >
                                    Label
                                </LinkCore>, dolor sit amet, consectetur
                                adipiscing elit.
                            </p>
                        </td>
                    </tr>
                    <tr>
                        <th>Visited</th>
                        <td>
                            <p>
                                Lorem ipsum{" "}
                                <LinkCore
                                    kind="primary"
                                    light={true}
                                    hovered={false}
                                    focused={false}
                                    pressed={false}
                                    href="#link"
                                >
                                    Label
                                </LinkCore>, dolor sit amet, consectetur
                                adipiscing elit.
                            </p>
                        </td>
                    </tr>
                </tbody>
            </table>
        );
        const tree = renderer.create(example).toJSON();
        expect(tree).toMatchSnapshot();
    });
});
